--- a/src/Pages/Accueil/accueil.scss
+++ b/src/Pages/Accueil/accueil.scss
@@ -45,6 +45,9 @@
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 100vh;
+    @include media-max(425px) {
+        overflow-x: hidden;
+    }
 }
 
 @keyframes gradient {
