--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -8,6 +8,9 @@
     align-items: center;
     padding-top: 150px;
     padding-bottom: 150px;
+    @include media-max(425px) {
+        overflow-x: hidden;
+    }
 }
 .title {
     font-family: $police;
