--- a/src/Pages/Error/error.scss
+++ b/src/Pages/Error/error.scss
@@ -5,6 +5,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include media-max(425px) {
+        overflow-x: hidden;
+    }
 }
 
 .titleerror {
